Solved overflow quill issues

--- a/src/app/Registro-Audiencia/components/TextEditor.css
+++ b/src/app/Registro-Audiencia/components/TextEditor.css
@@ -3,7 +3,8 @@
   border-left: none !important;
   border-right: none !important;
   outline: none;
-  height: 100%;
+  height: calc(100vh - 120px);
+  overflow: auto;
 }
 .ql-toolbar{
   border: none !important;
